--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>groupId</groupId>
+    <groupId>CS414.2018Sp</groupId>
     <artifactId>T11</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <version>4.2.0-SNAPSHOT</version>
+    <url>https://github.com/CSU-CS414-SP2018/T11</url>
 
-    
 </project>
